[package]
name = "raft-demo"
version = "0.1.0"
edition = "2021"
description = "A demo for raft application."
repository = "https://github.com/JasonkayZK/raft-demo"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
